*SVN*

* Only wrap request processing with our USR1 signal handler so FastCGI can trap it and raise an exception while waiting for connections. Idle processes exit immediately rather than waiting for another request; active processes gracefully exit when the request is finished.  [Jeremy Kemper]

* Alter prior change to use require_dependency instead of require_or_load. Causes ApplicationController to be reloaded again. Closes #6587. [Nicholas Seckar]

* Rake: use absolute paths to load lib and vendor tasks so they may be run outside of RAILS_ROOT.  #6584 [jchris]

* Remove temporary crutch to help ApplicationController be unloaded. Closes #6496. [Nicholas Seckar]

* scaffold_resource generator uses _path named routes and head instead of render :nothing => true.  #6545 [Josh Susser]

* Generator can show diff on file collision to help you decide whether to skip or overwrite.  #6364 [jeffw, Jeremy Kemper]

* Generated directories are recursively svn added, like mkdir -p.  #6416 [NeilW]

* resource and scaffold_resource generators add a restful route to config/routes.rb  [Jeremy Kemper]

* Revert environment changes for autoload_paths. [Koz]

* Update to latest Prototype, which doesn't serialize disabled form elements, adds clone() to arrays, empty/non-string Element.update() and adds a fixes excessive error reporting in WebKit beta versions [Thomas Fuchs]

* Clean up the output of rake stats,  de-emphasise components and apis, and remove the indents for tests [Koz]

* Added option to script/process/spawner of specifying the binding address #5133 [zsombor]

* Update environment.rb comments to include config.autoload_paths. Closes #6478 [caio]

* Update scaffold to use new form_tag block functionality.  Closes #6480. [BobSilva]

* Plugin generator: check for class collisions.  #4833 [vinbarnes@gmail.com]

* Mailer generator: handle mailers in modules, set mime_version in unit test.  [Jeremy Kemper]
